# dolphin-lit-rm

./: .gitignore  README.md  autogen-readme.md  cli.py  pyproject.toml  requirements.txt  run_pipeline.sh
dolphin-lit-rm/: cli.py  core_configs.py
dolphin-lit-rm/classification/: classifier.py
dolphin-lit-rm/config/: datasets.yaml  run.yaml
dolphin-lit-rm/config/prompts/: classification.jinja  scoring.jinja
dolphin-lit-rm/ingestion/: longform.py  main.py  standalone.py
dolphin-lit-rm/postprocessing/: pipeline.py
dolphin-lit-rm/preprocessing/: filter.py  prompt_reconstruct.py  segment.py
dolphin-lit-rm/utils/: file_io.py  llm_api_client.py  schema_def.py  state_manager.py
dolphin_lit_rm/: core_configs.py
dolphin_lit_rm/classification/: classifier.py
dolphin_lit_rm/config/: datasets.yaml.example  rubric.yaml.example  run.yaml.example
dolphin_lit_rm/config/prompts/: prompt_reconstruction.jinja  scoring.jinja
dolphin_lit_rm/config/rubrics/: academic_informative.yaml  adult.yaml  default.yaml  entertainment_personal.yaml  narrative_creative.yaml  professional.yaml
dolphin_lit_rm/ingestion/: main.py  sharegpt.py
dolphin_lit_rm/normalization/: sampler.py
dolphin_lit_rm/postprocessing/: pipeline.py
dolphin_lit_rm/preprocessing/: filter.py  prompt_reconstruct.py  segment.py
dolphin_lit_rm/scoring/: judge.py
dolphin_lit_rm/utils/: concurrency.py  file_io.py  llm_api_client.py  state_manager.py  text_utils.py
misc/: gemini_first_pass.txt  initial_codebase_generation_prompt.txt
scripts/: run_pipeline.sh
